# libtokamap

./: .clangd  .gitignore  CMakeLists.txt  PACKAGING.md  README.md  TODO.md  mkdocs.yml  pyproject.toml.in  setup.py.in
.github/workflows/: build.yml  build_binaries.yml  build_wheels.yml  pages.yml
cmake/: Coverage.cmake  GitVersion.cmake  LibTokaMapConfig.cmake.in  PackagingUtils.cmake  StandardSettings.cmake  Utils.cmake
docker/: Dockerfile.alma10.1  Dockerfile.ubuntu24.04
docs/: contributing.md  creating-custom-functions.md  creating-data-source.md  index.md  using-the-library.md
docs/developer_resources/: README.md  architectural_improvements.md  component_relationships.md
docs/knowledge_graph/: README.md  api_patterns.md  array_library_alternatives.md  component_relationships.md  knowledge_graph.md  refactoring_guide.md
examples/simple_mapper/: CMakeLists.txt  config.toml.in
examples/simple_mapper/custom_library/: custom_library.cpp
examples/simple_mapper/data/: data_42.json
examples/simple_mapper/data_source_library/: json_data_source.cpp  json_data_source.hpp
examples/simple_mapper/mappings/example_v1/: mappings.cfg.json
examples/simple_mapper/mappings/example_v1/magnetics/40/: mappings.json
examples/simple_mapper/src/: config_path.hpp.in  json_data_source.cpp  json_data_source.hpp  simple_mapper.cpp
ext_include/: valijson_nlohmann_bundled.hpp
ext_include/nlohmann/: json.hpp
graph/: docker-compose.yml
include/: config.hpp.in  libtokamap.hpp  version.hpp.in
python/: .clangd  README.md  libtokamap.cpp  pyproject.toml  pyproject.toml.in  setup.py  setup.py.in
python/example/: simple_mapper.py
python/src/libtokamap/: __init__.py
rust/: CMakeLists.txt
schemas/: mappings.schema.json
scripts/: git2debchangelog.sh  package.sh
src/exceptions/: exceptions.hpp
src/handlers/: config_schema.hpp  mapping_handler.cpp  mapping_handler.hpp
src/map_types/: base_mapping.hpp  custom_mapping.cpp  custom_mapping.hpp  data_source_mapping.cpp  data_source_mapping.hpp  dim_mapping.cpp  dim_mapping.hpp  expr_mapping.cpp  expr_mapping.hpp  map_arguments.cpp  map_arguments.hpp  value_mapping.cpp  value_mapping.hpp
src/utils/: algorithm.hpp  compiler.hpp  indices.cpp  indices.hpp  library_loader.cpp  library_loader.hpp  mapping_locator.cpp  mapping_locator.hpp  os_utils.hpp  profiler.cpp  profiler.hpp  ram_cache.cpp  ram_cache.hpp  render.cpp  render.hpp  scale_offset.cpp  scale_offset.hpp  subset.cpp  subset.hpp  syntax_parser.cpp  syntax_parser.hpp  typed_data_array.cpp  typed_data_array.hpp  types.hpp  unix_utils.cpp  windows_utils.cpp
test/: CMakeLists.txt
test/src/: data_source_mapping_test.cpp  dim_mapping_test.cpp  indices_test.cpp  mapping_locator_test.cpp  parse_slices_test.cpp  render_test.cpp  subset_test.cpp  syntax_parser_test.cpp  test_helpers.cpp  test_helpers.hpp  typed_data_array_test.cpp  value_mapping_test.cpp
