[build-system]
requires = ["setuptools>=61.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libtokamap"
version = "0.2.3"
description = "A library for flexible data mapping and transformation using TokaMap compatible mappings"
authors = [
    { name = "Jonathan Hollocombe", email = "jonathan.hollocombe@ukaea.uk" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tokamap>=0.1.0",
    "numpy>=2.0",
]
keywords = [
    "tokamap",
    "validation",
    "schema",
    "experimental-data",
    "data-mapping",
    "json-schema",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/ukaea/libtokamap"
"Repository" = "https://github.com/ukaea/libtokamap"
"Issue Tracker" = "https://github.com/ukaea/libtokamap/issues"
"Documentation" = "https://github.com/ukaea/libtokamap#readme"

[tool.setuptools]
packages = ["libtokamap"]

[tool.setuptools.package-dir]
"" = "src"
